<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="nav_head_weather">Weather</string>
    <string name="nav_head_settings">Settings</string>
    <string name="nav_head_about">About</string>
    <string name="nav_head_intsruments">Instruments</string>
    <string name="edit_cities_head">Edit cities</string>

    <string name="about_dialog_head">About application</string>
    <string name="about_dialog_decs">Here will be description. \n\n<b>Weather</b></string>

    <string name="activity_main_title">Weather</string>

    <!--Weather Fragment-->
    <string name="weather_humidity">%1$d%%</string>
    <string name="weather_temp">%1$d°</string>

    <string name="weather_wind_speed_metr">%1$d m/s</string>
    <string name="weather_wind_speed_km">%1$d km/h</string>
    <string name="weather_wind_speed_miles">%1$d miles/h</string>

    <string name="weather_pressure_hpa">%1$d hPa</string>
    <string name="weather_pressure_mm">%1$d mmHg</string>

    <string name="weather_temperature_minmax">%1$d° / %2$d°</string>
    <string name="weather_desc_hourly">Hourly</string>
    <string name="weather_desc_daily">Daily</string>
    <string name="weather_temp_forecast_cels">%1$d°</string>
    <string name="weather_update_time">Updated: </string>

    <string name="weather_forecast_date_today">Today</string>
    <string name="weather_forecast_date_tommorow">Tomorrow</string>

    <!--Settings Fragment-->
    <string name="settings_temp_units">Temperature</string>
    <string name="settings_wind_units">Wind speed</string>
    <string name="settings_pressure_units">Pressure</string>
    <string name="settings_auto_update">Auto update interval</string>
    <string name="settings_title_units">Units of measure</string>

    <!--About Fragment-->
    <string name="dev_name">Aleksandr Chichkanov</string>
    <string name="tv_icons_provider_autor_desc">Weather icons made by</string>
    <string name="tv_icons_provider_autor">https://www.flaticon.com/authors/linector</string>
    <string name="tv_icons_provider_site_desc">Site with great icons</string>
    <string name="tv_icons_provider_site">https://www.flaticon.com</string>

    <!--Additional-->
    <string name="select_city_head">Add city</string>
    <string name="select_city_hint">Enther the city</string>
    <string name="default_city">Moscow</string>
    <string name="network_error_message">Network error</string>
    <string name="weather_default_value">-</string>
    <string name="load_weather_error">Error</string>
    <string name="default_city_name">Error</string>

    <!--Settings values-->
    <string-array name="refresh_entries">
        <item>Never</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="refresh_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string-array name="wind_entries">
        <item>M/s</item>
        <item>Km/h</item>
        <item>Mph</item>
    </string-array>
    <string-array name="wind_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="temp_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="temp_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pressure_entries">
        <item>mmHg</item>
        <item>hPa</item>
    </string-array>
    <string-array name="pressure_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>