<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.ListPreference
        android:defaultValue="60"
        android:entries="@array/refresh_entries"
        android:entryValues="@array/refresh_values"
        android:key="refresh_update"
        android:summary="%s"
        android:title="@string/settings_auto_update" />

    <PreferenceCategory android:title="@string/settings_title_units">

        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/temp_entries"
            android:entryValues="@array/temp_values"
            android:key="temp_units"
            android:summary="%s"
            android:title="@string/settings_temp_units" />

        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/wind_entries"
            android:entryValues="@array/wind_values"
            android:key="wind_speed_units"
            android:summary="%s"
            android:title="@string/settings_wind_units" />

        <android.support.v7.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/pressure_entries"
            android:entryValues="@array/pressure_values"
            android:key="pressure_units"
            android:summary="%s"
            android:title="@string/settings_pressure_units" />

    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>