<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/iv_about_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            app:srcCompat="@mipmap/app_icon_big" />

        <TextView
            android:id="@+id/tv_about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_about_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/dev_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_icons_provider_autor_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_author"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/tv_icons_provider_autor_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_icons_provider_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_icons_provider_autor_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/tv_icons_provider_autor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_icons_provider_site_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_icons_provider_autor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/tv_icons_provider_site_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_icons_provider_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_icons_provider_site_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/tv_icons_provider_site"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RelativeLayout>
</ScrollView>